# tissai

./: .dockerignore  .gitignore  .pnp.cjs  .prettierignore  .yarnrc.yml  Dockerfile  README.md  bert.py  flake.nix  generateDb.js  generateRelationships.py  model.json  nyt.js  package.json  parseResponse.js  parseResponse.test.js  pyproject.toml  railway.json  shell.nix  tsconfig.base.json  tsconfig.json  turbo.json
apps/indexer/: package.json  pyproject.toml  tsconfig.json
dataGenerator/: .pnp.cjs  .prettierignore  package.json  pyproject.toml  test.py
dataGenerator/src/: Cache.js  Cache.test.js  Content.js  Content.test.js  Crawler.js  Crawler.test.js  Domain.js  Domain.test.js  Fetcher.js  Fetcher.test.js  Indexer.js  Indexer.test.js  Parser.js  Robots.js  Robots.test.js  Sitexml.test.js  generateDb.js  generateEmbeddings.py  generateKeywords.py  generateLabels.py  generateLabels_test.py  generateRelationships.py  getUrls.js  getUrls.test.js  loadPg.js  products.py  shops.js
hephaestus/: pyproject.toml
hephaestus/src/: content.py  content_test.py  db.py  db_test.py  indexer.py  indexer_test.py  main.py  main_test.py  page.py  page_test.py  parser_test.py  predicates.py  predicates_test.py  triples.py  triples_test.py
indexer/: .prettierignore  package.json  pyproject.toml  tsconfig.json
indexer/__tests__/: customMatchers.ts  db.test.ts  index.ts  indexer.test.ts
indexer/src/: Connection.ts  Db.test.ts  Db.ts  EntityExtractor.ts  Extractor.ts  Reporter.test.ts  Reporter.ts  createInserts.ts  generateDb.js  generateEmbeddings.py  generateKeywords.py  generateLabels.py  index.test.ts  index.ts  loadPg.js  parsePage.test.ts  parsePage.ts  parseStructuredInfo.ts  (+1 more)
(+439 files in other folders)
