[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
beautifulsoup4 = "^4.12.3"
lxml = "^5.2.1"
psycopg2-binary = "^2.9.9"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
asymmetric-matchers = "^0.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
